prevents overflowing of content

--- a/client/blocks/reader-combined-card/style.scss
+++ b/client/blocks/reader-combined-card/style.scss
@@ -210,7 +210,6 @@
 	word-wrap: break-word;
 	position: relative;
 	margin-top: 4px;
-	white-space: nowrap;
 
 	&:not( .is-placeholder )::after {
 		@include long-content-fade( $size: 10% );
